Ignore "allow" and "disallow" set in java.security.manager system property
https://github.com/eclipse-openj9/openj9-docs/issues/1212

Added information to the Introduction to class data sharing topic and What's new in version 0.41.0 topic. Incorporated the feedback.

Closes #1212
Signed-off-by: Sreekala Gopakumar <sreekala.gopakumar@ibm.com>